// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When fetching multiple resources GET /resources/audioItems when all of the resources are published should fetch multiple resources of type audioItem 1`] = `
{
  "entities": [
    {
      "actions": [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
      "lengthMilliseconds": 20000,
      "mimeType": "audio/mpeg",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "The Wooden Boy",
          },
        ],
      },
      "tags": [],
      "text": "[12000] [JHC] {eng}: There once was a little wooden boy. [15550]
[18300] [JHC] {eng}: His name was Pinocchio [19240]",
    },
    {
      "actions": [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110111",
      "lengthMilliseconds": 23409,
      "mimeType": "audio/mpeg",
      "name": {
        "items": [
          {
            "languageCode": "clc",
            "role": "original",
            "text": "Down at the River",
          },
        ],
      },
      "tags": [],
      "text": "[3400] [BL] {eng}: While she went down to the river [3670]
[3700] [SD] {eng}: someone had already filled the water tank. [3980]
[4010] [BL] {eng}: These were the types of problems we had. [4290]",
    },
    {
      "actions": [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110113",
      "lengthMilliseconds": 32989,
      "mimeType": "audio/mpeg",
      "name": {
        "items": [
          {
            "languageCode": "hai",
            "role": "original",
            "text": "Learning about Protocols",
          },
        ],
      },
      "tags": [],
      "text": "[120] [E1] {eng}: this type of spoon is used in ceremonies [848]
[930] [E2] {eng}: by members of the opposite clan of the house chief [1080]",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/audioItems when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
      "lengthMilliseconds": 20000,
      "mimeType": "audio/mpeg",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "The Wooden Boy",
          },
        ],
      },
      "tags": [],
      "text": "[12000] [JHC] {eng}: There once was a little wooden boy. [15550]
[18300] [JHC] {eng}: His name was Pinocchio [19240]",
    },
    {
      "actions": [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110111",
      "lengthMilliseconds": 23409,
      "mimeType": "audio/mpeg",
      "name": {
        "items": [
          {
            "languageCode": "clc",
            "role": "original",
            "text": "Down at the River",
          },
        ],
      },
      "tags": [],
      "text": "[3400] [BL] {eng}: While she went down to the river [3670]
[3700] [SD] {eng}: someone had already filled the water tank. [3980]
[4010] [BL] {eng}: These were the types of problems we had. [4290]",
    },
    {
      "actions": [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110113",
      "lengthMilliseconds": 32989,
      "mimeType": "audio/mpeg",
      "name": {
        "items": [
          {
            "languageCode": "hai",
            "role": "original",
            "text": "Learning about Protocols",
          },
        ],
      },
      "tags": [],
      "text": "[120] [E1] {eng}: this type of spoon is used in ceremonies [848]
[930] [E2] {eng}: by members of the opposite clan of the house chief [1080]",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/bibliographicReferences when all of the resources are published should fetch multiple resources of type bibliographicReference 1`] = `
{
  "entities": [
    {
      "actions": [],
      "data": {
        "abstract": "This is the abstract, NOT a general note!",
        "creators": [
          {
            "name": "Alana Duvernay",
            "type": "author",
          },
        ],
        "isbn": "978-1-895811-34-6",
        "numberOfPages": 455,
        "place": "Kennebunk Port, Maine",
        "publisher": "Atlantic Publishing",
        "title": "A Day in the Life",
        "type": "book",
        "url": "https://atlanticpublishing.com",
        "year": 1999,
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "data": {
        "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
        "creators": [
          {
            "name": "Sigurd Purcell",
            "type": "author",
          },
        ],
        "doi": "10.14288/bcs.v0i19.784",
        "issn": "00052949",
        "issueDate": "Spring 2013",
        "publicationTitle": "Journal of History",
        "title": "Report on the Cariboo Chilcotin Justice inquiry",
        "type": "journalArticle",
        "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "tags": [],
    },
    {
      "actions": [],
      "data": {
        "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
        "caseName": "2002-07-08_Tsilhqot'inTitleCase",
        "court": "Supreme Court of British Columbia",
        "dateDecided": "Recorded 2002-07-08",
        "pages": "Pages 1-6",
        "type": "courtCase",
        "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
          "label": "law",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
              "type": "playlist",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/bibliographicReferences when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "data": {
        "abstract": "This is the abstract, NOT a general note!",
        "creators": [
          {
            "name": "Alana Duvernay",
            "type": "author",
          },
        ],
        "isbn": "978-1-895811-34-6",
        "numberOfPages": 455,
        "place": "Kennebunk Port, Maine",
        "publisher": "Atlantic Publishing",
        "title": "A Day in the Life",
        "type": "book",
        "url": "https://atlanticpublishing.com",
        "year": 1999,
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "data": {
        "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
        "creators": [
          {
            "name": "Sigurd Purcell",
            "type": "author",
          },
        ],
        "doi": "10.14288/bcs.v0i19.784",
        "issn": "00052949",
        "issueDate": "Spring 2013",
        "publicationTitle": "Journal of History",
        "title": "Report on the Cariboo Chilcotin Justice inquiry",
        "type": "journalArticle",
        "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "tags": [],
    },
    {
      "actions": [],
      "data": {
        "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
        "caseName": "2002-07-08_Tsilhqot'inTitleCase",
        "court": "Supreme Court of British Columbia",
        "dateDecided": "Recorded 2002-07-08",
        "pages": "Pages 1-6",
        "type": "courtCase",
        "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
          "label": "law",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
              "type": "playlist",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/books when all of the resources are published should fetch multiple resources of type book 1`] = `
{
  "entities": [
    {
      "actions": [],
      "author": "John Doeburg",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "pages": [
        {
          "identifier": "1",
          "text": "foo",
          "translation": "dee foo",
        },
        {
          "identifier": "2",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2002",
      "subtitle": "The wolf's revenge",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "Three Little Pigs",
    },
    {
      "actions": [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
      "pages": [
        {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2011",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "An Adventure Story",
    },
    {
      "actions": [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110025",
      "pages": [
        {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2012",
      "tags": [],
      "title": "An Adventure Story II",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/books when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "author": "John Doeburg",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "pages": [
        {
          "identifier": "1",
          "text": "foo",
          "translation": "dee foo",
        },
        {
          "identifier": "2",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2002",
      "subtitle": "The wolf's revenge",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "Three Little Pigs",
    },
    {
      "actions": [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
      "pages": [
        {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2011",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "An Adventure Story",
    },
    {
      "actions": [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110025",
      "pages": [
        {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2012",
      "tags": [],
      "title": "An Adventure Story II",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/mediaItems when all of the resources are published should fetch multiple resources of type mediaItem 1`] = `
{
  "entities": [
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 2500,
      "mimeType": "audio/mpeg",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "episode title (in language)",
      "titleEnglish": "Metal Mondays episode 1",
      "url": "https://www.metalmondays.com/1.mp3",
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "lengthMilliseconds": 910000,
      "mimeType": "video/mp4",
      "tags": [],
      "title": "video title (in language)",
      "titleEnglish": "cool video",
      "url": "https://be.tsilhqotinlanguage.ca:3003/download?id=3028_6d3b2a922b.mp4",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/mediaItems when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 2500,
      "mimeType": "audio/mpeg",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "episode title (in language)",
      "titleEnglish": "Metal Mondays episode 1",
      "url": "https://www.metalmondays.com/1.mp3",
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "lengthMilliseconds": 910000,
      "mimeType": "video/mp4",
      "tags": [],
      "title": "video title (in language)",
      "titleEnglish": "cool video",
      "url": "https://be.tsilhqotinlanguage.ca:3003/download?id=3028_6d3b2a922b.mp4",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/photographs when all of the resources are published should fetch multiple resources of type photograph 1`] = `
{
  "entities": [
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
      "imageURL": "https://www.mysound.org/downloads/Adiitsii-Running.png",
      "photographer": "Susie McRealart",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "label": "placenames",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
              "type": "photograph",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
              "type": "audioItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112003",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "imageURL": "https://www.mysound.org/downloads/Nuu-Story.png",
      "photographer": "Robert McRealart",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
          "label": "songs",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "photograph",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112002",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "imageURL": "https://www.mysound.org/downloads/TwoBrothersPole.png",
      "photographer": "Kenny Tree-Huggens",
      "tags": [],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/photographs when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
      "imageURL": "https://www.mysound.org/downloads/Adiitsii-Running.png",
      "photographer": "Susie McRealart",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "label": "placenames",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
              "type": "photograph",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
              "type": "audioItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112003",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "imageURL": "https://www.mysound.org/downloads/Nuu-Story.png",
      "photographer": "Robert McRealart",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
          "label": "songs",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "photograph",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112002",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "imageURL": "https://www.mysound.org/downloads/TwoBrothersPole.png",
      "photographer": "Kenny Tree-Huggens",
      "tags": [],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/playlists when all of the resources are published should fetch multiple resources of type playlist 1`] = `
{
  "entities": [
    {
      "actions": [],
      "episodes": [
        "audioItem/9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
      ],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "name": {
        "items": [
          {
            "languageCode": "clc",
            "role": "original",
            "text": "Blake's jams",
          },
        ],
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
          "label": "law",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
              "type": "playlist",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/playlists when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "episodes": [
        "audioItem/9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
      ],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "name": {
        "items": [
          {
            "languageCode": "clc",
            "role": "original",
            "text": "Blake's jams",
          },
        ],
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
          "label": "law",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
              "type": "playlist",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/songs when all of the resources are published should fetch multiple resources of type song 1`] = `
{
  "entities": [
    {
      "actions": [],
      "audioURL": "https://www.myaudio.com/lamb.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 3500,
      "lyrics": "Mary had a little lamb, little lamb.",
      "startMilliseconds": 0,
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "Song title in language",
      "titleEnglish": "Mary had a little lamb",
    },
    {
      "actions": [],
      "audioURL": "https://www.myaudio.com/badsong.wav",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "lengthMilliseconds": 33000,
      "lyrics": "Ain't gonna see the light of day, light of day, light of day",
      "startMilliseconds": 0,
      "tags": [],
      "title": "Unpublished Song Title (lang)",
      "titleEnglish": "Unpublished Song Title (Engl)",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/songs when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "audioURL": "https://www.myaudio.com/lamb.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 3500,
      "lyrics": "Mary had a little lamb, little lamb.",
      "startMilliseconds": 0,
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "Song title in language",
      "titleEnglish": "Mary had a little lamb",
    },
    {
      "actions": [],
      "audioURL": "https://www.myaudio.com/badsong.wav",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "lengthMilliseconds": 33000,
      "lyrics": "Ain't gonna see the light of day, light of day, light of day",
      "startMilliseconds": 0,
      "tags": [],
      "title": "Unpublished Song Title (lang)",
      "titleEnglish": "Unpublished Song Title (Engl)",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/spatialFeatures when all of the resources are published should fetch multiple resources of type spatialFeature 1`] = `
{
  "entities": [
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          54.034404852745006,
          -132.17563335558532,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
      "properties": {
        "description": "Description for point 100",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 100",
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          53.26710566708586,
          -131.99142447847115,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
      "properties": {
        "description": "Description for point 101",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 101",
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          51.93152097800416,
          -123.14042112774867,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
      "properties": {
        "description": "Description for point 102",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 102",
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          51.935065638350636,
          -122.50936316168337,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110103",
      "properties": {
        "description": "Description for point 103",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 103",
      },
      "tags": [],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          52.12579975880678,
          -123.68132823530952,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110104",
      "properties": {
        "description": "Description for point 104",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 104",
      },
      "tags": [],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          [
            52.3,
            -124.2,
          ],
          [
            52.35,
            -124.85,
          ],
          [
            52.21,
            -124.9,
          ],
          [
            52.05,
            -125.1,
          ],
          [
            52.15,
            -125.1,
          ],
          [
            52.33,
            -125.22,
          ],
          [
            52.45,
            -125.39,
          ],
        ],
        "type": "LineString",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "properties": {
        "description": "One amazing hike!",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Windy Path",
      },
      "tags": [],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          [
            [
              52.47,
              -123.6,
            ],
            [
              52.42,
              -123.95,
            ],
            [
              52.05,
              -123.95,
            ],
            [
              52.05,
              -123.685,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110300",
      "properties": {
        "description": "Description for point 300",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Point with ID: 300 Name",
      },
      "tags": [],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/spatialFeatures when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          54.034404852745006,
          -132.17563335558532,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
      "properties": {
        "description": "Description for point 100",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 100",
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          53.26710566708586,
          -131.99142447847115,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
      "properties": {
        "description": "Description for point 101",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 101",
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          51.93152097800416,
          -123.14042112774867,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
      "properties": {
        "description": "Description for point 102",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 102",
      },
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          51.935065638350636,
          -122.50936316168337,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110103",
      "properties": {
        "description": "Description for point 103",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 103",
      },
      "tags": [],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          52.12579975880678,
          -123.68132823530952,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110104",
      "properties": {
        "description": "Description for point 104",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 104",
      },
      "tags": [],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          [
            52.3,
            -124.2,
          ],
          [
            52.35,
            -124.85,
          ],
          [
            52.21,
            -124.9,
          ],
          [
            52.05,
            -125.1,
          ],
          [
            52.15,
            -125.1,
          ],
          [
            52.33,
            -125.22,
          ],
          [
            52.45,
            -125.39,
          ],
        ],
        "type": "LineString",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "properties": {
        "description": "One amazing hike!",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Windy Path",
      },
      "tags": [],
    },
    {
      "actions": [],
      "geometry": {
        "coordinates": [
          [
            [
              52.47,
              -123.6,
            ],
            [
              52.42,
              -123.95,
            ],
            [
              52.05,
              -123.95,
            ],
            [
              52.05,
              -123.685,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110300",
      "properties": {
        "description": "Description for point 300",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Point with ID: 300 Name",
      },
      "tags": [],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/terms when all of the resources are published should fetch multiple resources of type term 1`] = `
{
  "entities": [
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "term": "Chil-term-1",
      "termEnglish": "Engl-term-1",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
      "term": "Chil-term-2",
      "termEnglish": "Engl-term-2",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
      "term": "Chil-term-no-english",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
      "tags": [],
      "term": "My Secret Term",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
      "tags": [],
      "term": "I am singing (lang)",
      "termEnglish": "I am singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
      "tags": [],
      "term": "You are singing (lang)",
      "termEnglish": "You are singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
      "tags": [],
      "term": "She is singing (lang)",
      "termEnglish": "She is singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "tags": [],
      "term": "I am not singing (lang)",
      "termEnglish": "I am not singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
      "tags": [],
      "term": "You are not singing (lang)",
      "termEnglish": "You are not singing (Engl)",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/terms when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "term": "Chil-term-1",
      "termEnglish": "Engl-term-1",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
      "term": "Chil-term-2",
      "termEnglish": "Engl-term-2",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
              "type": "video",
            },
          ],
        },
      ],
      "term": "Chil-term-no-english",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
      "tags": [],
      "term": "My Secret Term",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
      "tags": [],
      "term": "I am singing (lang)",
      "termEnglish": "I am singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
      "tags": [],
      "term": "You are singing (lang)",
      "termEnglish": "You are singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
      "tags": [],
      "term": "She is singing (lang)",
      "termEnglish": "She is singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "tags": [],
      "term": "I am not singing (lang)",
      "termEnglish": "I am not singing (Engl)",
    },
    {
      "actions": [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
      "tags": [],
      "term": "You are not singing (lang)",
      "termEnglish": "You are not singing (Engl)",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/videos when all of the resources are published should fetch multiple resources of type video 1`] = `
{
  "entities": [
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
      "lengthMilliseconds": 20000,
      "mimeType": "video/mp4",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "The Demonstration",
          },
        ],
      },
      "tags": [],
      "text": "[12000] [DM] {eng}: This is how. [15550]
[18300] [DM] {eng}: It is done [19240]",
      "videoUrl": "https://be.tsilhqotinlanguage.ca:3003/download?id=3028_6d3b2a922b.mp4",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/videos when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
      "lengthMilliseconds": 20000,
      "mimeType": "video/mp4",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "The Demonstration",
          },
        ],
      },
      "tags": [],
      "text": "[12000] [DM] {eng}: This is how. [15550]
[18300] [DM] {eng}: It is done [19240]",
      "videoUrl": "https://be.tsilhqotinlanguage.ca:3003/download?id=3028_6d3b2a922b.mp4",
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/vocabularyLists when all of the resources are published should fetch multiple resources of type vocabularyList 1`] = `
{
  "entities": [
    {
      "actions": [],
      "entries": [
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
            "term": "I am singing (lang)",
            "termEnglish": "I am singing (Engl)",
          },
          "variableValues": {
            "person": "11",
            "positive": true,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
            "term": "You are singing (lang)",
            "termEnglish": "You are singing (Engl)",
          },
          "variableValues": {
            "person": "12",
            "positive": false,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
            "term": "She is singing (lang)",
            "termEnglish": "She is singing (Engl)",
          },
          "variableValues": {
            "person": "13",
            "positive": false,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
            "term": "I am not singing (lang)",
            "termEnglish": "I am not singing (Engl)",
          },
          "variableValues": {
            "person": "01",
            "positive": true,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
            "term": "You are not singing (lang)",
            "termEnglish": "You are not singing (Engl)",
          },
          "variableValues": {
            "person": "02",
            "positive": false,
          },
        },
      ],
      "form": {
        "fields": [
          {
            "constraints": [],
            "description": "choose positive",
            "label": "positive",
            "name": "positive",
            "options": [
              {
                "display": "negative (lha)",
                "value": false,
              },
              {
                "display": "positive form (switch for negative)",
                "value": true,
              },
            ],
            "type": "SWITCH",
          },
          {
            "constraints": [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": [
              {
                "display": "I",
                "value": "1",
              },
              {
                "display": "You",
                "value": "2",
              },
              {
                "display": "She",
                "value": "3",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
      "name": "To Sing (lang)",
      "nameEnglish": "To Sing (Engl)",
      "tags": [],
    },
    {
      "actions": [],
      "entries": [
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": {
            "person": "11",
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": {
            "person": "12",
          },
        },
      ],
      "form": {
        "fields": [
          {
            "constraints": [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": [
              {
                "display": "I",
                "value": "11",
              },
              {
                "display": "We",
                "value": "12",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": "test VL 1 chil",
      "nameEnglish": "test VL 1 engl",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "entries": [
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": {
            "his": false,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": {
            "his": true,
          },
        },
      ],
      "form": {
        "fields": [
          {
            "constraints": [],
            "description": "choose his",
            "label": "his",
            "name": "his",
            "options": [
              {
                "display": "his",
                "value": true,
              },
              {
                "display": "hers",
                "value": false,
              },
            ],
            "type": "SWITCH",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "name": "test VL 2 CHIL- no engl name",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": [],
}
`;

exports[`When fetching multiple resources GET /resources/vocabularyLists when some of the resources are unpublished should return the expected number of results 1`] = `
{
  "entities": [
    {
      "actions": [],
      "entries": [
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
            "term": "I am singing (lang)",
            "termEnglish": "I am singing (Engl)",
          },
          "variableValues": {
            "person": "11",
            "positive": true,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
            "term": "You are singing (lang)",
            "termEnglish": "You are singing (Engl)",
          },
          "variableValues": {
            "person": "12",
            "positive": false,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
            "term": "She is singing (lang)",
            "termEnglish": "She is singing (Engl)",
          },
          "variableValues": {
            "person": "13",
            "positive": false,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
            "term": "I am not singing (lang)",
            "termEnglish": "I am not singing (Engl)",
          },
          "variableValues": {
            "person": "01",
            "positive": true,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
            "term": "You are not singing (lang)",
            "termEnglish": "You are not singing (Engl)",
          },
          "variableValues": {
            "person": "02",
            "positive": false,
          },
        },
      ],
      "form": {
        "fields": [
          {
            "constraints": [],
            "description": "choose positive",
            "label": "positive",
            "name": "positive",
            "options": [
              {
                "display": "negative (lha)",
                "value": false,
              },
              {
                "display": "positive form (switch for negative)",
                "value": true,
              },
            ],
            "type": "SWITCH",
          },
          {
            "constraints": [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": [
              {
                "display": "I",
                "value": "1",
              },
              {
                "display": "You",
                "value": "2",
              },
              {
                "display": "She",
                "value": "3",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
      "name": "To Sing (lang)",
      "nameEnglish": "To Sing (Engl)",
      "tags": [],
    },
    {
      "actions": [],
      "entries": [
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": {
            "person": "11",
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": {
            "person": "12",
          },
        },
      ],
      "form": {
        "fields": [
          {
            "constraints": [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": [
              {
                "display": "I",
                "value": "11",
              },
              {
                "display": "We",
                "value": "12",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": "test VL 1 chil",
      "nameEnglish": "test VL 1 engl",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    {
      "actions": [],
      "entries": [
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": {
            "his": false,
          },
        },
        {
          "term": {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": {
            "his": true,
          },
        },
      ],
      "form": {
        "fields": [
          {
            "constraints": [],
            "description": "choose his",
            "label": "his",
            "name": "his",
            "options": [
              {
                "display": "his",
                "value": true,
              },
              {
                "display": "hers",
                "value": false,
              },
            ],
            "type": "SWITCH",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "name": "test VL 2 CHIL- no engl name",
      "tags": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": [
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": [],
}
`;
